--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,7 +69,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/camisa.jpg
+    - assets/Vestido.jpg
   #   - images/a_dot_ham.jpeg
 
 
