--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   font_awesome_flutter: ^10.8.0
-  sqflite: 
+  sqflite:
+  path:
 
 dev_dependencies:
   flutter_test:
