--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ version: 1.0.0+1
 
 
 environment:
-  sdk: ^3.7.2
+  sdk: ^3.5.1
 
 
 # Dependencies specify other packages that your package needs in order to work.
@@ -33,7 +33,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  sqflite:
+  path:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
